// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/type/interval.proto";
import "wfa/measurement/internal/kingdom/certificate.proto";
import "wfa/measurement/internal/kingdom/data_provider_details.proto";
import "wfa/measurement/internal/kingdom/model_line_key.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal DataProvider entity type.
message DataProvider {
  fixed64 external_data_provider_id = 1;

  // The Certificate belonging to this DataProvider for public key signature
  // verification.
  Certificate certificate = 2;

  DataProviderDetails details = 3;

  // The list of duchies that must be included in all computations involving the
  // DataProvider
  repeated string required_external_duchy_ids = 4;

  message DataAvailabilityMapEntry {
    ModelLineKey key = 1;
    google.type.Interval value = 2;
  }
  // Map of [ModelLineKey][] to data availability interval.
  repeated DataAvailabilityMapEntry data_availability_intervals = 5;
}
